--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -1,1 +1,5 @@
-SECRET_KEY_JWT={KEY_SECRET}
+SECRET_KEY_JWT="KEY_SECRET"
+HOST_NAME="HOST_NAME"
+USERNAME="USERNAME"
+PASSWORD="123PASSWORD"
+DATABASE_NAME="DATABASE_NAME"
